I guess we can't use sqlite and postgres with sqlc. Feels bad.

--- a/internal/sqlc/sql-migrate.yml
+++ b/internal/sqlc/sql-migrate.yml
@@ -1,5 +1,5 @@
 development:
-  dialect: sqlite3
+  dialect: postgres
   datasource: test.db
-  dir: db/migrations/sqlite3
+  dir: db/migrations/postgres
 
