--- a/internal/sqlc/sqlc.yml
+++ b/internal/sqlc/sqlc.yml
@@ -9,6 +9,7 @@ sql:
         out: "/generated"
         sql_package: "pgx/v5"
         emit_result_struct_pointers: true
+        emit_json_tags: true
         overrides:
           - db_type: "uuid"
             go_type:
