--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,26 +87,26 @@ services:
       postgres:
         condition: service_healthy
 
-  seeder:
-    build:
-      context: .
-      dockerfile: ./build/Dockerfile.dev
-    volumes:
-      - .:/app
-      - go-mod-cache:/go/pkg/mod
-    environment:
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=collagegenerator
-    command: >
-      sh -c "go run cmd/seed/main.go"
-    depends_on:
-      postgres:
-        condition: service_healthy
-      migrator:
-        condition: service_completed_successfully
+  # seeder:
+  #   build:
+  #     context: .
+  #     dockerfile: ./build/Dockerfile.dev
+  #   volumes:
+  #     - .:/app
+  #     - go-mod-cache:/go/pkg/mod
+  #   environment:
+  #     - POSTGRES_HOST=postgres
+  #     - POSTGRES_PORT=5432
+  #     - POSTGRES_USER=postgres
+  #     - POSTGRES_PASSWORD=postgres
+  #     - POSTGRES_DB=collagegenerator
+  #   command: >
+  #     sh -c "go run cmd/seed/main.go"
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #     migrator:
+  #       condition: service_completed_successfully
 
   thumbnail-worker:
     build:
