--- a/.air.toml
+++ b/.air.toml
@@ -4,10 +4,10 @@ tmp_dir = "tmp"
 
 [build]
 # Use your Makefile commands
-cmd = "make collageapi"
-bin = "./bin/collageapi"
+cmd = "make api"
+bin = "./bin/api"
 # Customize binary.
-full_bin = "./bin/collageapi"
+full_bin = "./bin/api"
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html"]
 # Ignore these filename extensions or directories.
