--- a/.air.toml
+++ b/.air.toml
@@ -1,23 +1,23 @@
-# .air.toml
 root = "."
 tmp_dir = "tmp"
 
 [build]
-# Use your Makefile commands
-cmd = "make api"
+# Use make to build the service
+cmd = "make build-service SERVICE_NAME=api"
+# Binary file yields from `cmd`.
 bin = "./bin/api"
 # Customize binary.
 full_bin = "./bin/api"
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html"]
 # Ignore these filename extensions or directories.
-exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+exclude_dir = ["assets", "tmp", "vendor", "build", ".git"]
 # Watch these directories if you specified.
 include_dir = []
 # Exclude files.
 exclude_file = []
 # This log file places in your tmp_dir.
-log = "air.log"
+log = "build-errors.log"
 # It's not necessary to trigger build each time file changes if it's too frequent.
 delay = 1000 # ms
 # Stop running old binary when build errors occur.
