--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,4 @@
-.env*
-/build/data/*
+.env
+.env.local
 
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-data/*
-resources/*
-
-# Test binary, build with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
-# Go modules (remove the comment below to include it)
-# .go/
-
-# Output of the go command (remove the comment below to include it)
-/bin/
-# /pkg/
-# /out/
-
-.DS_Store
+/bin
