--- a/k8s/base/secret.yaml
+++ b/k8s/base/secret.yaml
@@ -4,4 +4,7 @@ metadata:
   name: pixels-secrets
 type: Opaque
 stringData:
-  API_KEY: "dummy-key" 
+  API_KEY: "dummy-key"
+  POSTGRES_USER: "postgres"
+  POSTGRES_PASSWORD: "postgres"
+  POSTGRES_DB: "images"
