--- a/k8s/base/configmap.yaml
+++ b/k8s/base/configmap.yaml
@@ -4,3 +4,8 @@ metadata:
   name: pixels-config
 data:
   LOG_LEVEL: "info"
+  SERVER_HOST: "0.0.0.0"
+  SERVER_PORT: "8080"
+  POSTGRES_HOST: "postgres"
+  POSTGRES_PORT: "5432"
+  POSTGRES_DB: "images"
