--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 resources:
 - serviceaccount.yaml
 - role.yaml
@@ -10,7 +9,12 @@ resources:
 - configmap.yaml
 - secret.yaml
 - networkpolicy.yaml
-
+- postgres-configmap.yaml
+- postgres-secret.yaml
+- postgres-pvc.yaml
+- postgres-deployment.yaml
+- postgres-service.yaml
+- migration-job.yaml
 labels:
 - includeSelectors: true
   pairs:
