--- a/k8s/base/networkpolicy.yaml
+++ b/k8s/base/networkpolicy.yaml
@@ -25,6 +25,13 @@ spec:
         - namespaceSelector:
             matchLabels:
               name: pixels-staging
+    - to:
+        - podSelector:
+            matchLabels:
+              app: postgres
+      ports:
+        - protocol: TCP
+          port: 5432
     - to: []
       ports:
         - protocol: UDP
