--- a/k8s/overlays/staging/configmap.yaml
+++ b/k8s/overlays/staging/configmap.yaml
@@ -5,3 +5,8 @@ metadata:
 data:
   ENV: "staging"
   LOG_LEVEL: "debug"
+  SERVER_HOST: "0.0.0.0"
+  SERVER_PORT: "8080"
+  POSTGRES_HOST: "postgres"
+  POSTGRES_PORT: "5432"
+  POSTGRES_DB: "images_staging"
