--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -38,13 +38,13 @@ spec:
               memory: "512Mi"
           livenessProbe:
             httpGet:
-              path: /health
+              path: /healthcheck
               port: 8080
             initialDelaySeconds: 30
-            periodSeconds: 10
+            periodSeconds: 60
           readinessProbe:
             httpGet:
-              path: /health
+              path: /healthcheck
               port: 8080
             initialDelaySeconds: 5
             periodSeconds: 5
