--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,16 +98,25 @@ jobs:
           argocd app set pixels-staging \
           --kustomize-image ${{ matrix.service }}=ghcr.io/pokemonpower92/pixels/${{ matrix.service }}:${SHORT_SHA}
           echo "✅ Updated ${{ matrix.service }} to ${SHORT_SHA}"
-          
-      - name: Sync deployment (only once after all services updated)
-        if: strategy.job-index == strategy.job-total - 1
+
+  sync-deployment:
+    needs: [deploy-staging]
+    runs-on: [self-hosted, k3s, pixels]
+    if: github.ref == 'refs/heads/main' && always() && !cancelled()
+    steps:
+      - name: Install Argo CD CLI
         run: |
-          argocd app sync pixels-staging --timeout 300
-          argocd app wait pixels-staging --timeout 600
+          if ! command -v argocd &> /dev/null; then
+            curl -sSL -o /tmp/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+            chmod +x /tmp/argocd
+            sudo mv /tmp/argocd /usr/local/bin/argocd
+          fi
           
-      - name: Verify deployment
-        if: strategy.job-index == strategy.job-total - 1
+      - name: Sync and verify deployment
         run: |
           SHORT_SHA=$(echo $GITHUB_SHA | cut -c1-7)
+          argocd login localhost:8081 --username admin --password ${{ secrets.ARGOCD_PASSWORD }} --insecure || exit 1
+          argocd app sync pixels-staging --timeout 300
+          argocd app wait pixels-staging --timeout 600
           argocd app get pixels-staging --output json | jq -r '.status.health.status' | grep -q "Healthy"
           echo "✅ Deployment successful: ${SHORT_SHA}"
