--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,6 +103,14 @@ jobs:
     runs-on: [self-hosted, k3s, pixels]
     if: github.ref == 'refs/heads/main' && always() && !cancelled()
     steps:
+      - name: Install kubectl
+        run: |
+          if ! command -v kubectl &> /dev/null; then
+            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+            chmod +x kubectl
+            sudo mv kubectl /usr/local/bin/
+          fi
+          
       - name: Install Argo CD CLI
         run: |
           if ! command -v argocd &> /dev/null; then
