--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,9 +54,10 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          SHORT_SHA=$(echo $GITHUB_SHA | cut -c1-7)
+          SHORT_SHA=$(git rev-parse --short HEAD)
           git tag "${{ matrix.service }}-${SHORT_SHA}"
           git push origin "${{ matrix.service }}-${SHORT_SHA}"
+          echo "SHORT_SHA=${SHORT_SHA}" >> $GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Set repository name
@@ -64,13 +65,17 @@ jobs:
         run: |
           echo "repo=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
       - name: Build and push
+        run: |
+          SHORT_SHA=$(git rev-parse --short HEAD)
+          echo "SHORT_SHA=${SHORT_SHA}" >> $GITHUB_ENV
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./build/Dockerfile  
           push: true
           tags: |
-            ghcr.io/${{ steps.repo.outputs.repo }}/${{ matrix.service }}:${{ github.sha }}
+            ghcr.io/${{ steps.repo.outputs.repo }}/${{ matrix.service }}:${{ env.SHORT_SHA }}
             ghcr.io/${{ steps.repo.outputs.repo }}/${{ matrix.service }}:latest
           build-args: |
             SERVICE_NAME=${{ matrix.service }}
@@ -95,7 +100,7 @@ jobs:
         run: |
           SHORT_SHA=$(echo $GITHUB_SHA | cut -c1-7)
           argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password ${{ secrets.ARGOCD_PASSWORD }} --insecure
-          argocd app set pixels-staging --kustomize-image ${{ matrix.service }}=ghcr.io/pokemonpower92/pixels/${{ matrix.service }}:${github.sha}
+          argocd app set pixels-staging --kustomize-image ${{ matrix.service }}=ghcr.io/pokemonpower92/pixels/${{ matrix.service }}:${SHORT_SHA}
           echo "✅ Updated ${{ matrix.service }} to ${SHORT_SHA}"
 
   sync-deployment:
@@ -121,7 +126,7 @@ jobs:
           
       - name: Sync and verify deployment
         run: |
-          SHORT_SHA=$(echo $GITHUB_SHA | cut -c1-7)
+          SHORT_SHA=$(git rev-parse --short HEAD)
           argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password ${{ secrets.ARGOCD_PASSWORD }} --insecure
           kubectl delete job pixels-migration -n pixels-staging --ignore-not-found=true
           argocd app sync pixels-staging --timeout 300
