--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,11 +96,11 @@ jobs:
         run: |
           argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password ${{ secrets.ARGOCD_PASSWORD }} --insecure
           if [ "${{ matrix.service }}" = "api" ]; then
-            echo "Setting pixels image parameter..."
-            argocd app set pixels-staging --parameter pixels.tag=${{ needs.detect-changes.outputs.short_sha }}
+            echo "Setting pixels image override..."
+            argocd app set pixels-staging --kustomize-image pixels:latest=ghcr.io/pokemonpower92/pixels/api:${{ needs.detect-changes.outputs.short_sha }}
           elif [ "${{ matrix.service }}" = "migrate" ]; then
-            echo "Setting migrate image parameter..."
-            argocd app set pixels-staging --parameter migrate.tag=${{ needs.detect-changes.outputs.short_sha }}
+            echo "Setting migrate image override..."
+            argocd app set pixels-staging --kustomize-image migrate:latest=ghcr.io/pokemonpower92/pixels/migrate:${{ needs.detect-changes.outputs.short_sha }}
           fi
           echo "✅ Updated ${{ matrix.service }} to ${{ needs.detect-changes.outputs.short_sha }}"
 
