--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -54,3 +54,5 @@ spec:
                 name: pixels-config
             - secretRef:
                 name: pixels-secrets
+            - secretRef:
+                name: jwt-secret
