--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - .:/app
       - go-mod-cache:/go/pkg/mod
+    env_file:
+      - .env
     environment:
       - SERVER_HOST=0.0.0.0
       - SERVER_PORT=8080
