--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Pipeline
+name: Build and Deploy Pipeline
 
 on:
   push:
@@ -76,8 +76,8 @@ jobs:
             ghcr.io/${{ steps.repo.outputs.repo }}/${{ matrix.service }}:latest
           build-args: |
             SERVICE_NAME=${{ matrix.service }}
-
-  trigger-deployment-workflow:
+            
+  deploy-staging:
     needs: [detect-changes, build-and-push]
     runs-on: [self-hosted, k3s, pixels]
     if: github.ref == 'refs/heads/main'
@@ -85,25 +85,205 @@ jobs:
       matrix:
         service: ${{ fromJson(needs.detect-changes.outputs.matrix).service }}
     steps:
-      - name: Install Argo CLI
+      - name: Install Argo CD CLI
         run: |
-          if ! command -v argo &> /dev/null; then
-            curl -sLO https://github.com/argoproj/argo-workflows/releases/download/v3.5.2/argo-linux-amd64.gz
-            gunzip argo-linux-amd64.gz
-            chmod +x argo-linux-amd64
-            sudo mv argo-linux-amd64 /usr/local/bin/argo
+          if ! command -v argocd &> /dev/null; then
+            curl -sSL -o /tmp/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+            chmod +x /tmp/argocd
+            sudo mv /tmp/argocd /usr/local/bin/argocd
+          fi
+      - name: Deploy service to staging via Argo CD
+        run: |
+          argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password ${{ secrets.ARGOCD_PASSWORD }} --insecure
+          if [ "${{ matrix.service }}" = "api" ]; then
+            echo "Setting pixels image override..."
+            argocd app set pixels-staging --kustomize-image pixels=ghcr.io/pokemonpower92/pixels/api:${{ needs.detect-changes.outputs.short_sha }}
+          elif [ "${{ matrix.service }}" = "migrate" ]; then
+            echo "Setting migrate image override..."
+            argocd app set pixels-staging --kustomize-image migrate=ghcr.io/pokemonpower92/pixels/migrate:${{ needs.detect-changes.outputs.short_sha }}
+          fi
+          echo "✅ Updated ${{ matrix.service }} to ${{ needs.detect-changes.outputs.short_sha }}"
+
+  sync-deployment:
+    needs: [detect-changes, deploy-staging]
+    runs-on: [self-hosted, k3s, pixels]
+    if: github.ref == 'refs/heads/main' && always() && !cancelled()
+    steps:
+      - name: Install kubectl
+        run: |
+          if ! command -v kubectl &> /dev/null; then
+            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+            chmod +x kubectl
+            sudo mv kubectl /usr/local/bin/
+          fi
+      - name: Install Argo CD CLI
+        run: |
+          if ! command -v argocd &> /dev/null; then
+            curl -sSL -o /tmp/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+            chmod +x /tmp/argocd
+            sudo mv /tmp/argocd /usr/local/bin/argocd
+          fi
+      - name: Create JWT Secret
+        run: |
+          kubectl create secret generic jwt-secret \
+            --from-literal=PRIVATE_KEY_PEM="${{ secrets.PRIVATE_KEY_PEM }}" \
+            -n pixels-staging \
+            --dry-run=client -o yaml | kubectl apply -f -
+          echo "✅ JWT secret created/updated"
+      - name: Sync and verify deployment
+        run: |
+          argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password ${{ secrets.ARGOCD_PASSWORD }} --insecure
+          kubectl delete job pixels-migration -n pixels-staging --ignore-not-found=true
+          argocd app sync pixels-staging --timeout 300
+          argocd app wait pixels-staging --timeout 600
+          argocd app get pixels-staging --output json | jq -r '.status.health.status' | grep -q "Healthy"
+          echo "✅ Deployment successful: ${{ needs.detect-changes.outputs.short_sha }}"
+
+  run-e2e-tests:
+    needs: [detect-changes, sync-deployment]
+    runs-on: [self-hosted, k3s, pixels]
+    if: github.ref == 'refs/heads/main' && always() && !cancelled()
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Run e2e tests
+        id: test
+        run: |
+          echo "🧪 Running e2e tests for deployment ${{ needs.detect-changes.outputs.short_sha }}"
+          echo "📦 Services deployed: ${{ join(fromJson(needs.detect-changes.outputs.matrix).service, ', ') }}"
+          
+          # Clean up any existing test jobs
+          kubectl delete job pixels-e2e-test -n pixels-staging --ignore-not-found=true
+          
+          # Create and run the test job
+          cat <<EOF | kubectl apply -f -
+          apiVersion: batch/v1
+          kind: Job
+          metadata:
+            name: pixels-e2e-test
+            namespace: pixels-staging
+            labels:
+              test-run: "${{ github.run_id }}"
+              commit: "${{ needs.detect-changes.outputs.short_sha }}"
+          spec:
+            ttlSecondsAfterFinished: 300
+            backoffLimit: 1
+            template:
+              spec:
+                restartPolicy: Never
+                containers:
+                - name: e2e-tests
+                  image: ghcr.io/pokemonpower92/test-runner:go
+                  workingDir: /workspace
+                  env:
+                  - name: TARGET_ENV
+                    value: "staging"
+                  - name: REPO_URL
+                    value: "https://github.com/${{ github.repository }}.git"
+                  - name: API_URL
+                    value: "http://pixels-api.pixels-staging.svc.cluster.local:8080"
+                  - name: COMMIT_SHA
+                    value: "${{ needs.detect-changes.outputs.short_sha }}"
+                  - name: DEPLOYED_SERVICES
+                    value: "${{ join(fromJson(needs.detect-changes.outputs.matrix).service, ',') }}"
+                  command: ["/bin/bash"]
+                  args: 
+                  - -c
+                  - |
+                    echo "🧪 Running e2e tests for deployment ${{ needs.detect-changes.outputs.short_sha }}"
+                    echo "🔗 Target API: \$API_URL"
+                    echo "📦 Services deployed: \$DEPLOYED_SERVICES"
+                    
+                    # Clone the repo to get the test files and Makefile
+                    git clone \$REPO_URL .
+                    git checkout \$COMMIT_SHA
+                    
+                    # Wait for the API to be ready before running tests
+                    echo "⏳ Waiting for API to be ready..."
+                    timeout 120 bash -c 'until curl -f \$API_URL/health > /dev/null 2>&1; do 
+                      echo "Waiting for API at \$API_URL..."; sleep 5; 
+                    done' || {
+                      echo "❌ API at \$API_URL failed to become ready within timeout"
+                      exit 1
+                    }
+                    
+                    echo "✅ API is ready, starting e2e tests..."
+                    
+                    # Run your e2e test suite
+                    run_test.sh
+                  resources:
+                    limits:
+                      memory: "512Mi"
+                      cpu: "500m"
+                    requests:
+                      memory: "256Mi"
+                      cpu: "250m"
+          EOF
+          
+          echo "⏳ Waiting for e2e tests to complete..."
+          
+          # Wait for the job to complete (success or failure)
+          if kubectl wait --for=condition=complete job/pixels-e2e-test -n pixels-staging --timeout=600s; then
+            echo "✅ E2E tests PASSED!"
+          else
+            echo "❌ E2E tests FAILED!"
+            kubectl logs job/pixels-e2e-test -n pixels-staging || true
+            exit 1
           fi
 
-      - name: Trigger Argo Workflow
+      - name: Rollback and revert on test failure
+        if: failure()
         run: |
-          # Submit workflow for this service
-          argo submit --from workflowtemplate/pixels-deployment-pipeline \
-            --namespace argo \
-            --parameter service-name=${{ matrix.service }} \
-            --parameter image-tag=${{ needs.detect-changes.outputs.short_sha }} \
-            --parameter environment=staging \
-            --parameter repo-url=https://github.com/${{ github.repository }}.git \
-            --wait \
-            --log
+          echo "🚨 E2E tests failed - performing automatic rollback and revert"
           
-          echo "✅ Deployment workflow completed for ${{ matrix.service }}:${{ needs.detect-changes.outputs.short_sha }}"
+          # 1. Immediate ArgoCD rollback for fast recovery
+          echo "⚡ Step 1: ArgoCD rollback (immediate)"
+          argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password ${{ secrets.ARGOCD_PASSWORD }} --insecure
+          argocd app rollback pixels-staging
+          argocd app wait pixels-staging --timeout 300
+          echo "✅ ArgoCD rollback complete - application restored"
+          
+          # 2. Revert git commit to keep things in sync
+          echo "🧹 Step 2: Git revert (cleanup)"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git revert ${{ github.sha }} --no-edit -m "Auto-revert: e2e tests failed for ${{ needs.detect-changes.outputs.short_sha }}"
+          git push origin main
+          echo "✅ Git revert complete"
+          
+          echo ""
+          echo "🎯 RECOVERY SUMMARY:"
+          echo "❌ Failed deployment: ${{ needs.detect-changes.outputs.short_sha }}"
+          echo "🔄 ArgoCD rolled back to previous working version"
+          echo "📝 Git commit reverted to keep history clean"
+          echo "📋 Check test logs above for failure details"
+          echo "🔗 ArgoCD UI: kubectl port-forward svc/argocd-server -n argocd 8080:443"
+
+  deployment-summary:
+    needs: [detect-changes, run-e2e-tests]
+    runs-on: [self-hosted, k3s, pixels]
+    if: always()
+    steps:
+      - name: Deployment Summary
+        run: |
+          echo "🎯 DEPLOYMENT SUMMARY"
+          echo "📝 Commit: ${{ needs.detect-changes.outputs.short_sha }}"
+          echo "🏷️  Services: ${{ join(fromJson(needs.detect-changes.outputs.matrix).service, ', ') }}"
+          
+          if [[ "${{ needs.run-e2e-tests.result }}" == "success" ]]; then
+            echo "✅ DEPLOYMENT SUCCESSFUL!"
+            echo "🎉 All services deployed and e2e tests passed"
+            echo "🚀 Deployment ${{ needs.detect-changes.outputs.short_sha }} is live in staging"
+          else
+            echo "❌ DEPLOYMENT FAILED AND ROLLED BACK"
+            echo "🔄 Application reverted to previous working version"
+            echo "💡 Check e2e test failure logs above"
+          fi
+          
+          echo ""
+          echo "🔗 Useful commands:"
+          echo "   kubectl get pods -n pixels-staging"
+          echo "   kubectl port-forward svc/argocd-server -n argocd 8080:443"
+          echo "   argocd app get pixels-staging"
